# aap-brevanalyse

./: .gitignore  Makefile  README.md  datasett.xlsx  pyproject.toml
quarto/: deskriptivPresentasjon.qmd  test.qmd
quarto/analysis/: analyse_ny.qmd
requirements/: dev.txt  main.txt
src/: Analyse.qmd  Analyse_ny.qmd  fetch_answers.py  lag_oppsummering.py  main.py  merge_sheets.py  utils.py  utils_plot.py  utils_secrets.py
