[project]
name = "aap-brev"
version = "0.1.0"
description = "analyse av brevene for arbeidsavklaringspenger"
authors = [
    {name = "Tobias McVey", email = "tobias.mcvey@nav.no"},
    {name = "Anders Lauvland"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["NAV"]
license = {file = "LICENSE"}

dependencies = [
    "pandas",
    "statsmodels",
    "openpyxl",
    "matplotlib",
    "plotly",
    "nbformat",
    "plot-likert",
    "seaborn",
    "researchpy"
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "python-dotenv",
    "black",
    "keyring",
    "pip-tools"
]

[project.urls]
"Homepage" = "https://github.com/navikt/aap-brevanalyse"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "testing"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
